<resources>
    <string name="app_name">Second App</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="setting">Setting</string>
    <string name="contact_fragment">Contact Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="setting_fragment">Setting Fragment</string>
    <string name="login">Login</string>
    <string name="please">Please Sign in to Continue</string>
    <string name="mail">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login2">LOGIN</string>
    <string name="forgot">FORGOT</string>
    <string name="dont_t_have_an_account">Dont\'t Have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">FULL NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>

</resources>