<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bb">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please"
        android:textSize="20sp"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="20sp"
        android:textColor="#3A1616">

    </TextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="280dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic_email"
        android:text="@string/mail"
        android:textColor="#FF1A0033">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:layout_marginTop="340dp"
        android:layout_marginRight="20dp"
        android:text="@string/password"
        android:textColor="#FF1A0033">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="#FF8200FF"
        android:layout_marginTop="390dp"
        android:layout_marginLeft="320dp"
        android:textStyle="bold">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="450dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_button"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:padding="5dp"
        android:text="@string/login2"
        android:textSize="30dp"
        android:textStyle="bold">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="690dp"
        android:text="@string/dont_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold">


    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="235dp"
        android:layout_marginTop="679dp"
        android:background="@drawable/login_sing_up_button"
        android:text="@string/sign_up"
        android:textColor="#FF000000"
        android:textSize="20sp"
        android:textStyle="bold">


    </androidx.appcompat.widget.AppCompatButton>


</RelativeLayout>