<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/bb">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        tools:ignore="MissingConstraints">

    </TextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic__person"
        android:text="@string/full_name"
        android:textColor="#FF1A0033">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="260dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic_email"
        android:text="@string/mail"
        android:textColor="#FF1A0033">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="310dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:text="@string/password"
        android:textColor="#FF1A0033">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="370dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:text="@string/confirm_password"
        android:textColor="#FF1A0033">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_register_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/login_button"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:text="@string/sign_up"
        android:textSize="30dp"
        android:textStyle="bold">

    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>